<resources>
    <string name="app_name">SixAndSixAndSix</string>
    <string name="laugh">乐</string>
    <string name="eat">吃</string>
    <string name="drink">喝</string>
    <string name="play">玩</string>
    <string name="splash_text">点击开启精彩之旅</string>
    <string name="splash_text1">吃喝玩乐</string>
    <string name="splash_text2">应有尽有</string>
    <string name="splash_text3">Enjoy Your Life</string>
    <string name="my_collection">我的收藏</string>
    <string name="setting">设置</string>
    <string name="clearCache">清理缓存</string>
    <string name="defaultNickname">O.Super.Mary</string>
    <string name="my_love">我喜欢的</string>
    <string name="my_history">我的历史</string>
    <string name="my_news">我的消息</string>
    <string name="agree">同意</string>
    <string name="discuss">评论</string>
    <string name="collection">收藏</string>
    <string name="discuss_default_text">请输入您的评论</string>
</resources>
