<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tf.sixandsix.activity.SplashActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splash_lottieView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/slpash_firstText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/splash_text1"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/slpash_firstText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/slpash_firstText1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/splash_text2"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/slpash_firstText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/slpash_firstText2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/splash_text3"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/splash_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/splash_btn_background"
        android:text="@string/splash_text"
        android:textColor="@color/white"
        android:visibility="gone" />
</RelativeLayout>
