<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tf.sixandsix.activity.EatInformationActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/eat_information_bottomTool"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/eat_information_appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/eat_information_cToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <Toolbar
                    android:id="@+id/eat_information_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:titleTextColor="@color/white"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/eat_information_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/eat_information_bottomTool"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/eat_information_agree_btn"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@mipmap/un_love"
            android:paddingTop="2dp"
            android:text="@string/agree"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/eat_information_collection_btn"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@mipmap/un_collect"
            android:paddingTop="2dp"
            android:text="@string/collection"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/eat_information_discuss_btn"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@mipmap/discuss"
            android:paddingTop="2dp"
            android:text="@string/discuss"
            android:textColor="@color/black" />

    </LinearLayout>
</RelativeLayout>
